data/derived/sp14/progs/unify/prog4610.ml.out
Characters 82-94:
  | Sine e-> buildSine(x);;
             ^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit -> expr
